INTYGFV-16221: Fix input alignment in RS (#1254)

--- a/apps/rehabstod/src/index.css
+++ b/apps/rehabstod/src/index.css
@@ -37,8 +37,14 @@ ids-input select,
 ids-select select,
 ids-textarea textarea {
   padding: 0.75rem 1.25rem;
-  border: 1px solid var(--IDS-COLOR-ACCENT-40);
   border-radius: var(--input_border-radius);
+}
+
+ids-input:not([valid='false']) input,
+ids-input:not([valid='false']) select,
+ids-select:not([valid='false']) select,
+ids-textarea:not([valid='false']) textarea {
+  border: 1px solid var(--IDS-COLOR-ACCENT-40);
 }
 
 ids-select {
